[tool.poetry]
name = "image-labs"
version = "0.1.0"
description = ""
authors = ["Marcus <marcus@pyteam.pro>"]
readme = "README.md"
packages = [{include = "image_labs"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.1"
dlib = "^19.24.2"
scipy = "^1.11.1"
scikit-image = "^0.21.0"
jupyter = "^1.0.0"
opencv-python = "^4.8.0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
